objects/nCHECK__Grading_Course__mdt.object
<CustomObject>
    <fields>
        <fullName>nCHECK__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCHECK__Grading_Wave__c</fullName>
        <label>Grading Wave</label>
        <referenceTo>nCHECK__Grading_Wave__mdt</referenceTo>
        <relationshipLabel>Grading Courses</relationshipLabel>
        <relationshipName>Grading_Courses</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nCHECK__Step__c</fullName>
        <label>Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Grading Course</label>
    <listViews>
        <fullName>nCHECK__ALL</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>nCHECK__Grading_Wave__c</columns>
        <columns>nCHECK__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Grading Courses</pluralLabel>
</CustomObject>